[gd_scene load_steps=9 format=3 uid="uid://bmkylp6mag1b5"]

[ext_resource type="Script" path="res://UI/Builder/builder_ui.gd" id="1_8p1r4"]
[ext_resource type="Texture2D" uid="uid://cuavlmqqttskv" path="res://Assets/track.png" id="2_kkf6p"]
[ext_resource type="Texture2D" uid="uid://cx3qqaqk6c6bi" path="res://icon.svg" id="3_lhk0c"]
[ext_resource type="PackedScene" uid="uid://bxknq77fh541" path="res://Scenes/Buildings/base_building.tscn" id="3_luiuj"]
[ext_resource type="Script" path="res://UI/Builder/building_data.gd" id="4_ljext"]
[ext_resource type="PackedScene" uid="uid://b2vbn26jqv268" path="res://Scenes/Buildings/Railroads/track_we.tscn" id="5_l70h1"]

[sub_resource type="Resource" id="Resource_6tes5"]
script = ExtResource("4_ljext")
building_name = "Base Building"
building_button_icon = ExtResource("3_lhk0c")
building_scene = ExtResource("3_luiuj")

[sub_resource type="Resource" id="Resource_61jv8"]
script = ExtResource("4_ljext")
building_name = "Track"
building_button_icon = ExtResource("2_kkf6p")
building_scene = ExtResource("5_l70h1")

[node name="BuilderUI" type="Control" groups=["builder_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8p1r4")
building_list = Array[ExtResource("4_ljext")]([SubResource("Resource_6tes5"), SubResource("Resource_61jv8")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Demolish" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_lhk0c")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/PanelContainer/HBoxContainer/MarginContainer/Demolish" to="." method="_on_demolish_pressed"]
